[package]
name = "cargo-target-dep-test"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
ckb-x64-simulator = { git = "https://github.com/nervosnetwork/ckb-x64-simulator", rev = "af5e3e8" }
